Version 5.1.2: (noch nicht veröffentlicht)
==============
- Wie angekündigt wurden "Pending Credits" aus den Statistiken entfernt
- Bündelung von CDN auf datatables.net (includiert jquery und bootstrap)
- Update momentjs auf Version 0.5.17
- Update auf datatables Version 1.10.18 und bootstrap 4.1.1
- Integration von fontawesome Version 5
- Option zum Aktivieren/Deaktivieren Export-Funktion von Highcharts integriert (settings.php -> $useHighchartExport)
- Es können nun auch die Badges der eigenen CPID von FreeDC angezeigt werden, sofern die cpid in der Tabelle "boinc_user" eingetragen und die Option aktiviert ist.
- Der Link zur jeweiligen Projekt-Homepage wurde aus der Übersichts-Tabelle entfernt und ist nun nur noch über die Projekt-Detail-Ansicht verfügbar.
- Es wurde ein Option für Sammel-Accounts hinzugefügt, so dass die account-xml-Dateien einbezogen werden können, welche im Unterordner xml/ abgespeichert sein müssen.
- Bei der Nutzung des aktuellen Sourcecodes der Stats von github, wird nun die entsprechende dev-Version anstelle der Release Version angezeigt.
  Das Anzeigen der Verfügbarkeit von Updates bei Nutzung dieser dev-Versionen findet bislang nur bei Release-Versionen statt.
- Das Erkennen von Projekten, die in der Datenbank als inaktiv (project_status = 0) markiert sind, wurde verbessert.
- Ein Anzeigefehler von beendeten Projekten, die auch keine Credits haben, wurde behoben.
- Das error-Management neu gestaltet
- Der Tooltip in den WCG-Details auf den Badges aktiviert
- Ein Fehler in den Spracheinstellungen für DataTables wurde behoben.

Hinweis:
Im Verzeichnis "database" wurde die Datei "update_db.sql" hinzugefügt.
Diese Datei beinhaltet sql-code, welcher per phpmyadmin oder über die Konsole in der Datenbank ausgeführt werden kann.
Damit werden ungenutzte Spalten in den Tabellen gelöscht.